
## process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libgraprof.la

libgraprof_la_SOURCES = libgraprof.c libgraprof.h instrument.c instrument.h mallhooks.c mallhooks.h highrestimer.c highrestimer.h buffer.h

libgraprof_la_LIBADD = -lrt
libgraprof_la_LDFLAGS = -version-info 0:0:0
